--- a/docs/visual-basic/misc/bc32092.md
+++ b/docs/visual-basic/misc/bc32092.md
@@ -8,31 +8,31 @@ helpviewer_keywords:
 - BC32092
 ms.assetid: b3041c1d-837c-4d58-bbb4-5c46f227b66d
 ms.openlocfilehash: 548fdede8f63e3565f9103c33d2c5dd2b15d5daa
-ms.sourcegitcommit: 5bbfe34a9a14e4ccb22367e57b57585c208cf757
+ms.sourcegitcommit: f513a91160b3fec289dd06646d0d6f81f8fcf910
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/17/2018
-ms.locfileid: "45747298"
+ms.lasthandoff: 09/18/2018
+ms.locfileid: "46287159"
 ---
-# <a name="type-or-39new39-expected"></a><span data-ttu-id="669dd-102">형식 또는 &#39;새로 만들기&#39; 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="669dd-102">Type or &#39;New&#39; expected</span></span>
-<span data-ttu-id="669dd-103">제네릭 형식 선언의 형식 매개 변수에서 `As` 키워드가 있는 제약 조건 목록을 지정하지만 유효한 제약 조건을 지정하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="669dd-103">A type parameter in the declaration of a generic type introduces a constraint list with the `As` keyword but does not specify a valid constraint.</span></span>  
+# <a name="type-or-39new39-expected"></a><span data-ttu-id="4d371-102">형식 또는 &#39;새로 만들기&#39; 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="4d371-102">Type or &#39;New&#39; expected</span></span>
+<span data-ttu-id="4d371-103">제네릭 형식 선언의 형식 매개 변수에서 `As` 키워드가 있는 제약 조건 목록을 지정하지만 유효한 제약 조건을 지정하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="4d371-103">A type parameter in the declaration of a generic type introduces a constraint list with the `As` keyword but does not specify a valid constraint.</span></span>  
   
- <span data-ttu-id="669dd-104">형식 매개 변수에 대한 제약 조건은 유효한 클래스 또는 인터페이스이거나 `Class`, `Structure`또는 `New`키워드 중 하나여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="669dd-104">A constraint on a type parameter must be a valid class or interface, or one of the keywords `Class`, `Structure`, or `New`.</span></span> <span data-ttu-id="669dd-105">잘못된 제약 조건을 지정하거나 키워드를 지정하지 않으면 컴파일러가 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="669dd-105">If you specify an invalid constraint or none at all, the compiler generates this error.</span></span>  
+ <span data-ttu-id="4d371-104">형식 매개 변수에 대한 제약 조건은 유효한 클래스 또는 인터페이스이거나 `Class`, `Structure`또는 `New`키워드 중 하나여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="4d371-104">A constraint on a type parameter must be a valid class or interface, or one of the keywords `Class`, `Structure`, or `New`.</span></span> <span data-ttu-id="4d371-105">잘못된 제약 조건을 지정하거나 키워드를 지정하지 않으면 컴파일러가 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="4d371-105">If you specify an invalid constraint or none at all, the compiler generates this error.</span></span>  
   
- <span data-ttu-id="669dd-106">**오류 ID:** BC32092</span><span class="sxs-lookup"><span data-stu-id="669dd-106">**Error ID:** BC32092</span></span>  
+ <span data-ttu-id="4d371-106">**오류 ID:** BC32092</span><span class="sxs-lookup"><span data-stu-id="4d371-106">**Error ID:** BC32092</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="669dd-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="669dd-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4d371-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4d371-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="669dd-108">형식 매개 변수를 제약하는 방법을 확인하고 제약 조건 목록에서 적절한 제약 조건을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="669dd-108">Determine how the type parameter should be constrained and specify the appropriate constraint in the constraint list.</span></span>  
+1.  <span data-ttu-id="4d371-108">형식 매개 변수를 제약하는 방법을 확인하고 제약 조건 목록에서 적절한 제약 조건을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="4d371-108">Determine how the type parameter should be constrained and specify the appropriate constraint in the constraint list.</span></span>  
   
-2.  <span data-ttu-id="669dd-109">클래스 또는 인터페이스로 형식 매개 변수를 제약하려면 해당 제약 조건에 이름을 정확하게 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="669dd-109">If you intend to constrain the type parameter by a class or interface, make sure the constraint spells it correctly.</span></span>  
+2.  <span data-ttu-id="4d371-109">클래스 또는 인터페이스로 형식 매개 변수를 제약하려면 해당 제약 조건에 이름을 정확하게 지정해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="4d371-109">If you intend to constrain the type parameter by a class or interface, make sure the constraint spells it correctly.</span></span>  
   
-3.  <span data-ttu-id="669dd-110">단일 형식 매개 변수에서 여러 제약 조건을 쉼표로 구분하고 해당 제약 조건 목록을 중괄호(`{ }`)로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="669dd-110">Remember to separate multiple constraints on a single type parameter with commas, and to enclose the constraint list in braces (`{ }`).</span></span>  
+3.  <span data-ttu-id="4d371-110">단일 형식 매개 변수에서 여러 제약 조건을 쉼표로 구분하고 해당 제약 조건 목록을 중괄호(`{ }`)로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="4d371-110">Remember to separate multiple constraints on a single type parameter with commas, and to enclose the constraint list in braces (`{ }`).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="669dd-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="669dd-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4d371-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="4d371-111">See also</span></span>
 
-- [<span data-ttu-id="669dd-112">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="669dd-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [<span data-ttu-id="669dd-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="669dd-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
-- [<span data-ttu-id="669dd-114">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="669dd-114">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
-- [<span data-ttu-id="669dd-115">New 연산자</span><span class="sxs-lookup"><span data-stu-id="669dd-115">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)  
-- [<span data-ttu-id="669dd-116">형식 목록</span><span class="sxs-lookup"><span data-stu-id="669dd-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="4d371-112">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="4d371-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [<span data-ttu-id="4d371-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="4d371-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
+- [<span data-ttu-id="4d371-114">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="4d371-114">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
+- [<span data-ttu-id="4d371-115">New 연산자</span><span class="sxs-lookup"><span data-stu-id="4d371-115">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)  
+- [<span data-ttu-id="4d371-116">형식 목록</span><span class="sxs-lookup"><span data-stu-id="4d371-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
