--- a/docs/visual-basic/misc/bc30657.md
+++ b/docs/visual-basic/misc/bc30657.md
@@ -8,22 +8,22 @@ helpviewer_keywords:
 - BC30657
 ms.assetid: dd28b718-6a88-444c-9844-672b93628c16
 ms.openlocfilehash: 5048343adf527f3d3000935af4c245a09e6ed654
-ms.sourcegitcommit: 3ab9254890a52a50762995fa6d7d77a00348db7e
+ms.sourcegitcommit: 2350a091ef6459f0fcfd894301242400374d8558
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/19/2018
-ms.locfileid: "46324440"
+ms.lasthandoff: 09/21/2018
+ms.locfileid: "46538976"
 ---
-# <a name="39ltprocedurenamegt39-has-a-return-type-that-is-not-supported-or-parameter-types-that-are-not-supported"></a><span data-ttu-id="fc02c-102">&#39;&lt;procedurename&gt; &#39; 에 지원 되지 않는 반환 형식 또는 지원 되지 않는 매개 변수 형식</span><span class="sxs-lookup"><span data-stu-id="fc02c-102">&#39;&lt;procedurename&gt;&#39; has a return type that is not supported or parameter types that are not supported</span></span>
-<span data-ttu-id="fc02c-103">프로시저 매개 변수 또는 Visual Studio에서 표현할 수 없는 반환 형식으로 선언 됩니다.</span><span class="sxs-lookup"><span data-stu-id="fc02c-103">A procedure is declared with parameters or a return type that cannot be represented by Visual Studio.</span></span>  
+# <a name="39ltprocedurenamegt39-has-a-return-type-that-is-not-supported-or-parameter-types-that-are-not-supported"></a><span data-ttu-id="1d5b0-102">&#39;&lt;procedurename&gt; &#39; 에 지원 되지 않는 반환 형식 또는 지원 되지 않는 매개 변수 형식</span><span class="sxs-lookup"><span data-stu-id="1d5b0-102">&#39;&lt;procedurename&gt;&#39; has a return type that is not supported or parameter types that are not supported</span></span>
+<span data-ttu-id="1d5b0-103">프로시저 매개 변수 또는 Visual Studio에서 표현할 수 없는 반환 형식으로 선언 됩니다.</span><span class="sxs-lookup"><span data-stu-id="1d5b0-103">A procedure is declared with parameters or a return type that cannot be represented by Visual Studio.</span></span>  
   
- <span data-ttu-id="fc02c-104">**오류 ID:** BC30657</span><span class="sxs-lookup"><span data-stu-id="fc02c-104">**Error ID:** BC30657</span></span>  
+ <span data-ttu-id="1d5b0-104">**오류 ID:** BC30657</span><span class="sxs-lookup"><span data-stu-id="1d5b0-104">**Error ID:** BC30657</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fc02c-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fc02c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1d5b0-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1d5b0-105">To correct this error</span></span>  
   
--   <span data-ttu-id="fc02c-106">지원되는 형식으로 반환 형식 또는 매개 변수를 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="fc02c-106">Define the return types or parameters as a supported type.</span></span>  
+-   <span data-ttu-id="1d5b0-106">지원되는 형식으로 반환 형식 또는 매개 변수를 정의합니다.</span><span class="sxs-lookup"><span data-stu-id="1d5b0-106">Define the return types or parameters as a supported type.</span></span>  
   
--   <span data-ttu-id="fc02c-107">이 프로시저에서 사용되는 데이터를 설명하는 새 형식을 개발합니다.</span><span class="sxs-lookup"><span data-stu-id="fc02c-107">Develop a new type that describes the data used by this procedure.</span></span>  
+-   <span data-ttu-id="1d5b0-107">이 프로시저에서 사용되는 데이터를 설명하는 새 형식을 개발합니다.</span><span class="sxs-lookup"><span data-stu-id="1d5b0-107">Develop a new type that describes the data used by this procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fc02c-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="fc02c-108">See Also</span></span>  
- [<span data-ttu-id="fc02c-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="fc02c-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
+## <a name="see-also"></a><span data-ttu-id="1d5b0-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1d5b0-108">See Also</span></span>  
+ [<span data-ttu-id="1d5b0-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="1d5b0-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
