--- a/docs/visual-basic/misc/bc30958.md
+++ b/docs/visual-basic/misc/bc30958.md
@@ -8,25 +8,25 @@ helpviewer_keywords:
 - BC30958
 ms.assetid: 9b01c510-2d2c-4890-a98c-36c0c8423949
 ms.openlocfilehash: 283932993ddf2ecd748082e15d0c3aee06264ec4
-ms.sourcegitcommit: 3ab9254890a52a50762995fa6d7d77a00348db7e
+ms.sourcegitcommit: 2350a091ef6459f0fcfd894301242400374d8558
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/20/2018
-ms.locfileid: "46480051"
+ms.lasthandoff: 09/21/2018
+ms.locfileid: "46540072"
 ---
-# <a name="object-created-by-edit-and-continue-is-not-yet-available-for-evaluation"></a><span data-ttu-id="b1d62-102">편집하며 계속하기 작업으로 생성한 개체는 아직 평가할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b1d62-102">Object created by Edit and Continue is not yet available for evaluation</span></span>
-<span data-ttu-id="b1d62-103">Visual Studio 디버거에서 새 개체를 만들고 있지만 아직 액세스할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b1d62-103">In the Visual Studio debugger, a new object is being created, but it cannot be accessed yet.</span></span>  
+# <a name="object-created-by-edit-and-continue-is-not-yet-available-for-evaluation"></a><span data-ttu-id="4e591-102">편집하며 계속하기 작업으로 생성한 개체는 아직 평가할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="4e591-102">Object created by Edit and Continue is not yet available for evaluation</span></span>
+<span data-ttu-id="4e591-103">Visual Studio 디버거에서 새 개체를 만들고 있지만 아직 액세스할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="4e591-103">In the Visual Studio debugger, a new object is being created, but it cannot be accessed yet.</span></span>  
   
- <span data-ttu-id="b1d62-104">개체를 사용할 수 없는 원인으로 메모리 할당 실패, 개체 상태가 동기화되지 않음 등이 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b1d62-104">Possible causes for an object to be unavailable include memory allocation failure and object state out of synchronization.</span></span> <span data-ttu-id="b1d62-105">이는 일시적인 내부 상태이며, 일반적으로 디버거에 대한 입력의 결과가 아닙니다.</span><span class="sxs-lookup"><span data-stu-id="b1d62-105">These are temporary internal conditions and usually not a result of input to the debugger.</span></span>  
+ <span data-ttu-id="4e591-104">개체를 사용할 수 없는 원인으로 메모리 할당 실패, 개체 상태가 동기화되지 않음 등이 있습니다.</span><span class="sxs-lookup"><span data-stu-id="4e591-104">Possible causes for an object to be unavailable include memory allocation failure and object state out of synchronization.</span></span> <span data-ttu-id="4e591-105">이는 일시적인 내부 상태이며, 일반적으로 디버거에 대한 입력의 결과가 아닙니다.</span><span class="sxs-lookup"><span data-stu-id="4e591-105">These are temporary internal conditions and usually not a result of input to the debugger.</span></span>  
   
- <span data-ttu-id="b1d62-106">**오류 ID:** BC30958</span><span class="sxs-lookup"><span data-stu-id="b1d62-106">**Error ID:** BC30958</span></span>  
+ <span data-ttu-id="4e591-106">**오류 ID:** BC30958</span><span class="sxs-lookup"><span data-stu-id="4e591-106">**Error ID:** BC30958</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b1d62-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b1d62-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4e591-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4e591-107">To correct this error</span></span>  
   
--   <span data-ttu-id="b1d62-108">종료 후 디버깅을 다시 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="b1d62-108">Terminate and restart debugging.</span></span>  
+-   <span data-ttu-id="4e591-108">종료 후 디버깅을 다시 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="4e591-108">Terminate and restart debugging.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b1d62-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b1d62-109">See Also</span></span>  
- [<span data-ttu-id="b1d62-110">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="b1d62-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)  
- [<span data-ttu-id="b1d62-111">방법: 실행 시작</span><span class="sxs-lookup"><span data-stu-id="b1d62-111">How to: Start Execution</span></span>](https://msdn.microsoft.com/library/b0fe0ce5-900e-421f-a4c6-aa44ddae453c)  
- [<span data-ttu-id="b1d62-112">방법: 디버깅을 중지 또는 실행 중지</span><span class="sxs-lookup"><span data-stu-id="b1d62-112">How to: Stop Debugging or Stop Execution</span></span>](https://msdn.microsoft.com/library/03c68f95-aa96-481b-990e-467e065453a5)  
- [<span data-ttu-id="b1d62-113">코드 단계별 실행 개요</span><span class="sxs-lookup"><span data-stu-id="b1d62-113">Code Stepping Overview</span></span>](https://msdn.microsoft.com/library/8791dac9-64d1-4bb9-b59e-8d59af1833f9)
+## <a name="see-also"></a><span data-ttu-id="4e591-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="4e591-109">See Also</span></span>  
+ [<span data-ttu-id="4e591-110">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="4e591-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)  
+ [<span data-ttu-id="4e591-111">방법: 실행 시작</span><span class="sxs-lookup"><span data-stu-id="4e591-111">How to: Start Execution</span></span>](https://msdn.microsoft.com/library/b0fe0ce5-900e-421f-a4c6-aa44ddae453c)  
+ [<span data-ttu-id="4e591-112">방법: 디버깅을 중지 또는 실행 중지</span><span class="sxs-lookup"><span data-stu-id="4e591-112">How to: Stop Debugging or Stop Execution</span></span>](https://msdn.microsoft.com/library/03c68f95-aa96-481b-990e-467e065453a5)  
+ [<span data-ttu-id="4e591-113">코드 단계별 실행 개요</span><span class="sxs-lookup"><span data-stu-id="4e591-113">Code Stepping Overview</span></span>](https://msdn.microsoft.com/library/8791dac9-64d1-4bb9-b59e-8d59af1833f9)
