--- a/docs/visual-basic/misc/bc30947.md
+++ b/docs/visual-basic/misc/bc30947.md
@@ -8,11 +8,11 @@ helpviewer_keywords:
 - BC30947
 ms.assetid: 6bc4df1b-e833-47c7-9568-9ced67a2af5d
 ms.openlocfilehash: a65113ec6756ed61df0cd9acf9567d6b5a54ac5d
-ms.sourcegitcommit: dfb2a100cfb4d3902c042f17b3204f49bc7635e7
-ms.translationtype: HT
+ms.sourcegitcommit: 2350a091ef6459f0fcfd894301242400374d8558
+ms.translationtype: MT
 ms.contentlocale: ko-KR
 ms.lasthandoff: 09/21/2018
-ms.locfileid: "46507255"
+ms.locfileid: "46562100"
 ---
 # <a name="suspend-request-is-pending"></a>일시 중단 요청이 대기 중입니다.
 Visual Studio 디버거에서 식이 프로시저 호출을 지정했지만 스레드 일시 중단 요청이 있습니다.  
