--- a/docs/visual-basic/misc/bc30800.md
+++ b/docs/visual-basic/misc/bc30800.md
@@ -8,25 +8,25 @@ helpviewer_keywords:
 - BC30800
 ms.assetid: ecdec760-8b51-474f-acad-17cf8059d83b
 ms.openlocfilehash: 17c75b55df4414109173820284c76fa36839fab9
-ms.sourcegitcommit: dfb2a100cfb4d3902c042f17b3204f49bc7635e7
-ms.translationtype: HT
+ms.sourcegitcommit: 2350a091ef6459f0fcfd894301242400374d8558
+ms.translationtype: MT
 ms.contentlocale: ko-KR
 ms.lasthandoff: 09/21/2018
-ms.locfileid: "46508296"
+ms.locfileid: "46561943"
 ---
-# <a name="method-arguments-must-be-enclosed-in-parentheses"></a><span data-ttu-id="d8c7d-102">메서드 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="d8c7d-102">Method arguments must be enclosed in parentheses</span></span>
-<span data-ttu-id="d8c7d-103">프로시저 호출을 제어 하는 규칙은 최신 버전의 Visual Basic의 경우 간단한.</span><span class="sxs-lookup"><span data-stu-id="d8c7d-103">The rules governing procedure calls are simpler in newer versions of Visual Basic.</span></span> <span data-ttu-id="d8c7d-104">모든 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="d8c7d-104">All arguments must be enclosed by parentheses.</span></span>  
+# <a name="method-arguments-must-be-enclosed-in-parentheses"></a><span data-ttu-id="79c04-102">메서드 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="79c04-102">Method arguments must be enclosed in parentheses</span></span>
+<span data-ttu-id="79c04-103">프로시저 호출을 제어 하는 규칙은 최신 버전의 Visual Basic의 경우 간단한.</span><span class="sxs-lookup"><span data-stu-id="79c04-103">The rules governing procedure calls are simpler in newer versions of Visual Basic.</span></span> <span data-ttu-id="79c04-104">모든 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="79c04-104">All arguments must be enclosed by parentheses.</span></span>  
   
- <span data-ttu-id="d8c7d-105">**오류 ID:** BC30800</span><span class="sxs-lookup"><span data-stu-id="d8c7d-105">**Error ID:** BC30800</span></span>  
+ <span data-ttu-id="79c04-105">**오류 ID:** BC30800</span><span class="sxs-lookup"><span data-stu-id="79c04-105">**Error ID:** BC30800</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d8c7d-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d8c7d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="79c04-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="79c04-106">To correct this error</span></span>  
   
--   <span data-ttu-id="d8c7d-107">인수 목록을 괄호로 묶습니다. 예:</span><span class="sxs-lookup"><span data-stu-id="d8c7d-107">Enclose the argument list in parentheses; for example:</span></span>  
+-   <span data-ttu-id="79c04-107">인수 목록을 괄호로 묶습니다. 예:</span><span class="sxs-lookup"><span data-stu-id="79c04-107">Enclose the argument list in parentheses; for example:</span></span>  
   
     ```  
     MySub(ArrayIndex, NewValue)  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="d8c7d-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d8c7d-108">See Also</span></span>  
- [<span data-ttu-id="d8c7d-109">Visual Basic의 순서 변경 호출 프로시저</span><span class="sxs-lookup"><span data-stu-id="d8c7d-109">Procedure Calling Sequence Changes in Visual Basic</span></span>](https://msdn.microsoft.com/library/4ef1eea6-36cb-4b97-a31b-9ba65e46a9fd)  
- [<span data-ttu-id="d8c7d-110">프로시저 매개 변수 및 인수</span><span class="sxs-lookup"><span data-stu-id="d8c7d-110">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+## <a name="see-also"></a><span data-ttu-id="79c04-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="79c04-108">See Also</span></span>  
+ [<span data-ttu-id="79c04-109">Visual Basic의 순서 변경 호출 프로시저</span><span class="sxs-lookup"><span data-stu-id="79c04-109">Procedure Calling Sequence Changes in Visual Basic</span></span>](https://msdn.microsoft.com/library/4ef1eea6-36cb-4b97-a31b-9ba65e46a9fd)  
+ [<span data-ttu-id="79c04-110">프로시저 매개 변수 및 인수</span><span class="sxs-lookup"><span data-stu-id="79c04-110">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
