--- a/docs/visual-basic/misc/bc32119.md
+++ b/docs/visual-basic/misc/bc32119.md
@@ -8,31 +8,31 @@ helpviewer_keywords:
 - BC32119
 ms.assetid: 30e6778d-5c2b-4f2d-a136-4e66fa9fbe4d
 ms.openlocfilehash: 9ade27427fb970bc596a02a47442c3c2c79f4c87
-ms.sourcegitcommit: 3ab9254890a52a50762995fa6d7d77a00348db7e
+ms.sourcegitcommit: 2350a091ef6459f0fcfd894301242400374d8558
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/20/2018
-ms.locfileid: "46472933"
+ms.lasthandoff: 09/21/2018
+ms.locfileid: "46562335"
 ---
-# <a name="constraint-39ltconstraint1gt39-conflicts-with-the-constraint-39ltconstraint2gt39-already-specified-for-type-parameter-39lttypeparameternamegt39"></a><span data-ttu-id="47f9d-102">제약 조건 &#39; &lt;constraint1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt; &#39; 형식 매개 변수에 대해 이미 지정 되어 &#39; &lt; typeparametername&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="47f9d-102">Constraint &#39;&lt;constraint1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39; already specified for type parameter &#39;&lt;typeparametername&gt;&#39;</span></span>
-<span data-ttu-id="47f9d-103">제네릭 형식이 형식 매개 변수에서 충돌하는 제약 조건으로 선언됩니다.</span><span class="sxs-lookup"><span data-stu-id="47f9d-103">A generic type is declared with conflicting constraints on a type parameter.</span></span>  
+# <a name="constraint-39ltconstraint1gt39-conflicts-with-the-constraint-39ltconstraint2gt39-already-specified-for-type-parameter-39lttypeparameternamegt39"></a><span data-ttu-id="32477-102">제약 조건 &#39; &lt;constraint1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt; &#39; 형식 매개 변수에 대해 이미 지정 되어 &#39; &lt; typeparametername&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="32477-102">Constraint &#39;&lt;constraint1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39; already specified for type parameter &#39;&lt;typeparametername&gt;&#39;</span></span>
+<span data-ttu-id="32477-103">제네릭 형식이 형식 매개 변수에서 충돌하는 제약 조건으로 선언됩니다.</span><span class="sxs-lookup"><span data-stu-id="32477-103">A generic type is declared with conflicting constraints on a type parameter.</span></span>  
   
- <span data-ttu-id="47f9d-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="47f9d-104">The following statement can generate this error.</span></span>  
+ <span data-ttu-id="32477-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="32477-104">The following statement can generate this error.</span></span>  
   
  `Public Class testClass(Of t As {Structure, Class })`  
   
- <span data-ttu-id="47f9d-105">제약 조건 `Structure` 및 `Class` 로 인해 형식 매개 변수 `t`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="47f9d-105">The constraints `Structure` and `Class` cause a conflict for type parameter `t`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
+ <span data-ttu-id="32477-105">제약 조건 `Structure` 및 `Class` 로 인해 형식 매개 변수 `t`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="32477-105">The constraints `Structure` and `Class` cause a conflict for type parameter `t`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
   
- <span data-ttu-id="47f9d-106">**오류 ID:** BC32119</span><span class="sxs-lookup"><span data-stu-id="47f9d-106">**Error ID:** BC32119</span></span>  
+ <span data-ttu-id="32477-106">**오류 ID:** BC32119</span><span class="sxs-lookup"><span data-stu-id="32477-106">**Error ID:** BC32119</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="47f9d-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="47f9d-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="32477-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="32477-107">To correct this error</span></span>  
   
--   <span data-ttu-id="47f9d-108">충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="47f9d-108">Change the type parameter constraints to avoid conflicts.</span></span>  
+-   <span data-ttu-id="32477-108">충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="32477-108">Change the type parameter constraints to avoid conflicts.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="47f9d-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="47f9d-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="32477-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="32477-109">See also</span></span>
 
-- [<span data-ttu-id="47f9d-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="47f9d-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [<span data-ttu-id="47f9d-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="47f9d-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
-- [<span data-ttu-id="47f9d-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="47f9d-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
-- [<span data-ttu-id="47f9d-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="47f9d-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
-- [<span data-ttu-id="47f9d-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="47f9d-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="32477-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="32477-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [<span data-ttu-id="32477-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="32477-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
+- [<span data-ttu-id="32477-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="32477-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
+- [<span data-ttu-id="32477-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="32477-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
+- [<span data-ttu-id="32477-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="32477-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
