--- a/docs/visual-basic/misc/bc32504.md
+++ b/docs/visual-basic/misc/bc32504.md
@@ -8,22 +8,22 @@ helpviewer_keywords:
 - BC32504
 ms.assetid: 4138b639-88d6-4b51-afcd-c92a1be36f1c
 ms.openlocfilehash: ebd309b4a9685b9f2aff43ebe848212c0f90b35a
-ms.sourcegitcommit: dfb2a100cfb4d3902c042f17b3204f49bc7635e7
+ms.sourcegitcommit: ad99773e5e45068ce03b99518008397e1299e0d1
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/20/2018
-ms.locfileid: "46492278"
+ms.lasthandoff: 09/23/2018
+ms.locfileid: "46705303"
 ---
-# <a name="39microsoftvisualbasiccomclassattribute39-cannot-be-applied-to-39ltclassname1gt39-because-its-container-39ltclassname2gt39-is-not-declared-39public39"></a><span data-ttu-id="43634-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 에 적용할 수 없습니다 &#39; &lt;classname1&gt; &#39; 때문에 해당 컨테이너 &#39; &lt;classname2&gt; &#39; &#39;공개&#39;</span><span class="sxs-lookup"><span data-stu-id="43634-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; cannot be applied to &#39;&lt;classname1&gt;&#39; because its container &#39;&lt;classname2&gt;&#39; is not declared &#39;Public&#39;</span></span>
-<span data-ttu-id="43634-103">`COMClassAttribute` 특성 블록을 사용하는 클래스가 `Public`이 아닌 클래스 내부에서 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="43634-103">A class using a `COMClassAttribute` attribute block is declared inside a class that is not `Public`.</span></span> <span data-ttu-id="43634-104">클래스를 COM 개체로 노출해야 하는 경우 전체 포함 계층 구조를 `Public` 액세스 권한으로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="43634-104">If a class is to be exposed as a COM object, its entire containment hierarchy must be declared with `Public` access.</span></span>  
+# <a name="39microsoftvisualbasiccomclassattribute39-cannot-be-applied-to-39ltclassname1gt39-because-its-container-39ltclassname2gt39-is-not-declared-39public39"></a><span data-ttu-id="56e48-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 에 적용할 수 없습니다 &#39; &lt;classname1&gt; &#39; 때문에 해당 컨테이너 &#39; &lt;classname2&gt; &#39; &#39;공개&#39;</span><span class="sxs-lookup"><span data-stu-id="56e48-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; cannot be applied to &#39;&lt;classname1&gt;&#39; because its container &#39;&lt;classname2&gt;&#39; is not declared &#39;Public&#39;</span></span>
+<span data-ttu-id="56e48-103">`COMClassAttribute` 특성 블록을 사용하는 클래스가 `Public`이 아닌 클래스 내부에서 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="56e48-103">A class using a `COMClassAttribute` attribute block is declared inside a class that is not `Public`.</span></span> <span data-ttu-id="56e48-104">클래스를 COM 개체로 노출해야 하는 경우 전체 포함 계층 구조를 `Public` 액세스 권한으로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="56e48-104">If a class is to be exposed as a COM object, its entire containment hierarchy must be declared with `Public` access.</span></span>  
   
- <span data-ttu-id="43634-105">**오류 ID:** BC32504</span><span class="sxs-lookup"><span data-stu-id="43634-105">**Error ID:** BC32504</span></span>  
+ <span data-ttu-id="56e48-105">**오류 ID:** BC32504</span><span class="sxs-lookup"><span data-stu-id="56e48-105">**Error ID:** BC32504</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="43634-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="43634-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="56e48-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="56e48-106">To correct this error</span></span>  
   
--   <span data-ttu-id="43634-107">포함하는 모든 클래스를 `Public`으로 선언하거나 `COMClassAttribute` 특성 블록을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="43634-107">Declare all containing classes `Public`, or remove the `COMClassAttribute` attribute block.</span></span>  
+-   <span data-ttu-id="56e48-107">포함하는 모든 클래스를 `Public`으로 선언하거나 `COMClassAttribute` 특성 블록을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="56e48-107">Declare all containing classes `Public`, or remove the `COMClassAttribute` attribute block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="43634-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="43634-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="56e48-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="56e48-108">See also</span></span>
 
-- [<span data-ttu-id="43634-109">ComClassAttribute 클래스</span><span class="sxs-lookup"><span data-stu-id="43634-109">ComClassAttribute Class</span></span>](xref:Microsoft.VisualBasic.ComClassAttribute)  
-- [<span data-ttu-id="43634-110">공용</span><span class="sxs-lookup"><span data-stu-id="43634-110">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+- [<span data-ttu-id="56e48-109">ComClassAttribute 클래스</span><span class="sxs-lookup"><span data-stu-id="56e48-109">ComClassAttribute Class</span></span>](xref:Microsoft.VisualBasic.ComClassAttribute)  
+- [<span data-ttu-id="56e48-110">공용</span><span class="sxs-lookup"><span data-stu-id="56e48-110">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
