--- a/docs/visual-basic/misc/bc33003.md
+++ b/docs/visual-basic/misc/bc33003.md
@@ -17,7 +17,7 @@ ms.locfileid: "33630304"
 # <a name="39handles39-is-not-valid-on-operator-declaration"></a>&#39;처리&#39; 연산자 선언에서 유효 하지 않습니다
 [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 은 [Handles](../../visual-basic/language-reference/statements/handles-clause.md) 키워드를 지정합니다.  
   
- `Sub` 프로시저만 이벤트를 처리할 수 있습니다. `Operator` 프로시저는 처리할 수 없습니다. 이벤트 처리기에 대한 자세한 내용은 [How to: Call an Event Handler in Visual Basic](../../visual-basic/programming-guide/language-features/procedures/how-to-call-an-event-handler.md)을 참조하세요.  
+ `Sub` 프로시저만 이벤트를 처리할 수 있습니다. `Operator` 프로시저는 처리할 수 없습니다. 이벤트 처리기에 대한 자세한 내용은 [방법: Visual Basic에서 이벤트 처리기 호출](../../visual-basic/programming-guide/language-features/procedures/how-to-call-an-event-handler.md)을 참조하세요.  
   
  `Operator` 프로시저에는 `Public` 및 `Shared` 키워드가 모두 필요하며 변환 연산자에는 `Widening` 또는 `Narrowing` 키워드가 필요합니다. 자세한 내용은 [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)을 참조하세요.  
   
